--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,4 @@
 */.ipynb_checkpoints/*
 profile_default/
 ipython_config.py
-plik1.dat
-helio.dat
-stars.dat
-file_list.txt
-telescope_names.txt
-astro.dat
-lcf.dat
-lcf.trf
+solv*.bash
